--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,11 @@
     <li> <%= current_user.first_name  %> <%= current_user.last_name %> </li>
     <li> <%= current_user.email%> </li>
   </ul>
+  <section class="repos">
+    <% @repositories.each do |repo| %>
+      <%= link_to "#{repo.name}", "#{repo.url}" %>
+    <% end %>
+  </section>
   <section>
     <h1>Bookmarked Segments</h1>
   </section>
