--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,16 @@
     <li> <%= current_user.first_name  %> <%= current_user.last_name %> </li>
     <li> <%= current_user.email%> </li>
   </ul>
+  <% if @repos %>
+    <section class="github">
+      <h3>Repositories</h3>
+      <ul>
+      <% @repos.each do |r| %>
+        <li> <%= link_to "#{r.name}", "#{r.url}", class: "repo" %> </li>
+      <% end %>
+      </ul>
+    </section>
+  <% end %>
   <section>
     <h1>Bookmarked Segments</h1>
   </section>
