--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,15 +11,21 @@
     <section class="github">
       <h3>Repositories</h3>
       <ul>
-      <% @repos.each do |r| %>
-        <li> <%= link_to "#{r.name}", "#{r.url}", class: "repo" %> </li>
-      <% end %>
+        <% @repos.each do |r| %>
+          <li> <%= link_to "#{r.name}", "#{r.url}", class: "repo" %> </li>
+        <% end %>
       </ul>
       <h3>Followers</h3>
       <ul>
-      <% @followers.each do |f| %>
-        <li> <%= link_to "#{f.login}", "#{f.url}", class: "follower" %> </li>
-      <% end %>
+        <% @followers.each do |f| %>
+          <li> <%= link_to "#{f.login}", "#{f.url}", class: "follower" %> </li>
+        <% end %>
+      </ul>
+      <h3>Users I'm Following</h3>
+      <ul>
+        <% @people_I_follow.each do |person| %>
+          <li> <%= link_to "#{person.name}", "#{person.url}", class: "person-i-follow" %></li>
+        <% end %>
       </ul>
     </section>
   <% end %>
