--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,13 @@
       <h3>Followers</h3>
       <ul>
       <% @followers.each do |f| %>
-        <li> <%= link_to "#{f.login}", "#{f.url}", class: "follower" %> </li>
+        <li> <%= link_to "#{f.name}", "#{f.url}", class: "follower" %> </li>
+      <% end %>
+      </ul>
+      <h3>Users I Follow</h3>
+      <ul>
+      <% @followed.each do |f| %>
+        <li> <%= link_to "#{f.name}", "#{f.url}", class: "followed" %> </li>
       <% end %>
       </ul>
     </section>
