--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,23 +12,23 @@
     <li> <%= current_user.first_name  %> <%= current_user.last_name %> </li>
     <li> <%= current_user.email%> </li>
   </ul>
-  <% if @repos %>
+  <% if current_user.token %>
     <section class="github">
       <h3>Repositories</h3>
       <ul>
-        <% @repos.each do |r| %>
+        <% @user.repos.each do |r| %>
           <li> <%= link_to "#{r.name}", "#{r.url}", class: "repo" %> </li>
         <% end %>
       </ul>
       <h3>Followers</h3>
       <ul>
-        <% @followers.each do |f| %>
+        <% @user.followers.each do |f| %>
           <li> <%= link_to "#{f.login}", "#{f.url}", class: "follower" %> </li>
         <% end %>
       </ul>
       <h3>Users I'm Following</h3>
       <ul>
-        <% @people_I_follow.each do |person| %>
+        <% @user.people_I_follow.each do |person| %>
           <li> <%= link_to "#{person.name}", "#{person.url}", class: "person-i-follow" %></li>
         <% end %>
       </ul>
