--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,24 +14,9 @@
   </ul>
   <% if current_user.token %>
     <section class="github">
-      <h3>Repositories</h3>
-      <ul>
-        <% @user.repos.each do |r| %>
-          <li> <%= link_to "#{r.name}", "#{r.url}", class: "repo" %> </li>
-        <% end %>
-      </ul>
-      <h3>Followers</h3>
-      <ul>
-        <% @user.followers.each do |f| %>
-          <li> <%= link_to "#{f.login}", "#{f.url}", class: "follower" %> </li>
-        <% end %>
-      </ul>
-      <h3>Users I'm Following</h3>
-      <ul>
-        <% @user.people_I_follow.each do |person| %>
-          <li> <%= link_to "#{person.name}", "#{person.url}", class: "person-i-follow" %></li>
-        <% end %>
-      </ul>
+      <%= render 'partials/repos' %>
+      <%= render 'partials/followers' %>
+      <%= render 'partials/friends' %>
     </section>
   <% end %>
   <section>
