Refactors nomenclature of friends into people_i_follow (and singular) due to conflicts with this card's requirements.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
     <section class="github">
       <%= render 'partials/repos' %>
       <%= render 'partials/followers' %>
-      <%= render 'partials/friends' %>
+      <%= render 'partials/people_i_follow' %>
     </section>
   <% end %>
   <section>
