Adds dream driven code for a bookmarks partial

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
     <%= render 'partials/my_friends' %>
     </section>
   <% end %>
-  <section>
-    <h1>Bookmarked Segments</h1>
+  <section class="bookmarks">
+    <%= render 'partials/bookmarks' %>
   </section>
 </section>
