--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -1,30 +1,37 @@
 <main class="tutorials">
-<h2><%= @facade.title %></h2>
-<h1 id="message"></h1>
-<div class="col col-4">
-  <h4>Videos</h4>
-  <ul>
-    <% @facade.videos.each do |video| %>
-      <li>
-        <h3><%= link_to video.title, tutorial_path(video_id: video.id), class: "show-link", id: video.position %></h3>
-      </li>
+  <h1 id="message"></h1>
+  <h2><%= @facade.title if @facade %></h2>
+  <div class="col col-4">
+    <h4>Videos</h4>
+    <% if @facade %>
+    <ul>
+      <% @facade.videos.each do |video| %>
+        <li>
+          <h3><%= link_to video.title, tutorial_path(video_id: video.id), class: "show-link", id: video.position %></h3>
+        </li>
+      <% end %>
+    </ul>
+    <% else %>
+    This tutorial does not have any videos yet.
     <% end %>
-  </ul>
-</div>
+  </div>
 
 <div class="col col-8">
   <div class="title-bookmark">
-    <h3><%= @facade.current_video.title %></h3>
-    <div class="bookmarks-btn">
-      <% if current_user %>
-      <%= button_to "Bookmark", user_videos_path(video_id: @facade.current_video.id, user_id: current_user.id), method: :post, class: "btn btn-outline mb1 teal" %>
-      <% else %>
-      <%= link_to "Bookmark", login_path, class: "btn btn-outline mb1 teal" %>
+      <h3><%= @facade.current_video.title if @facade %></h3>
+      <% if @facade %>
+      <div class="bookmarks-btn">
+        <% if current_user %>
+        <%= button_to "Bookmark", user_videos_path(video_id: @facade.current_video.id, user_id: current_user.id), method: :post, class: "btn btn-outline mb1 teal" %>
+        <% else %>
+        <%= link_to "Bookmark", login_path, class: "btn btn-outline mb1 teal" %>
+        <% end %>
+      </div>
       <% end %>
-    </div>
   </div>
 
   <div id="player">
+    <% if @facade %>
     <script src="https://www.youtube.com/player_api"></script>
     <script>
     // create youtube player
@@ -56,14 +63,17 @@
         message.innerHTML = "You watched them all. Bask in the glory of your new skills."
       }
     }
-  </script>
-</div>
+    </script>
+    <% end %>
+  </div>
 
+<% if @facade %>
   <h4>Description</h4>
   <p data-controller="tutorials" id="description-<%= @facade.current_video.id %>">
     <%= @facade.current_video.description.truncate(50) %>...
-    <%= link_to "More", "#", "data-action" => "click->tutorials#showDescription", id: @facade.current_video.id, class: "show-link"%>
+    <%= link_to "More", "#", "data-action" => "click->tutorials#showDescription", id: @facade.current_video.id, class: "show-link" %>
   </p>
+<% end %>
 </div>
 
 </main>
