--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -24,7 +24,7 @@
         <% if current_user %>
         <%= button_to "Bookmark", user_videos_path(video_id: @facade.current_video.id, user_id: current_user.id), method: :post, class: "btn btn-outline mb1 teal" %>
         <% else %>
-        <%= link_to "Bookmark", login_path, class: "btn btn-outline mb1 teal" %>
+          <%= button_tag "Bookmark", type: "button", onclick: "alert('You must be logged in to bookmark. Please create an account.')", class: "btn btn-outline mb1 teal" %>
         <% end %>
       </div>
       <% end %>
