--- a/app/views/partials/_friends.html.erb
+++ b/app/views/partials/_friends.html.erb
@@ -3,7 +3,7 @@
   <% @user.followings.each do |friend| %>
     <li id="<%= friend.name %>"> <%= link_to "#{friend.name}", "#{friend.url}", class: "follower" %>
       <% if !User.user_check(friend.name).nil? && !(@user.user.friend_check(friend.name)) %>
-        <%= link_to "Add as Friend", add_friend_path(id: @user.user.id, name: friend.name), method: :post %>
+        <%= link_to "Add as Friend", add_friend_path(id: @user.user.id, name: friend.name) %>
       <% end %>
     </li>
   <% end %>
